Fix alignment and style of ETH -> USD conversion in transfer funds

--- a/src/modules/dashboard/components/CreatePaymentDialog/CreatePaymentDialogForm.css
+++ b/src/modules/dashboard/components/CreatePaymentDialog/CreatePaymentDialogForm.css
@@ -22,7 +22,6 @@
   font-size: 11px !important;
   font-weight: 700;
   text-align: right;
-  justify-self: right;
 }
 
 .domainPotBalance {
